--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h2>Create Account</h2>
+      </div>
+
+      <form class="form" id="form">
+          <div class="form-control">
+          <label for="username">Username</label>
+
+          <input type="text" placeholder="ivanna" id="username" />
+
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+
+          <small>Error message</small>
+        </div>
+
+
+        <div class="form-control">
+          <label for="email">Email</label>
+
+          <input type="email" placeholder="hello@ivanna.com" id="email" />
+
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+
+          <small>Error message</small>
+        </div>
+
+        <div class="form-control">
+          <label for="password">Password</label>
+
+          <input type="password" placeholder="Password" id="password" />
+
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+
+          <small>Error message</small>
+        </div>
+
+
+               <div class="form-control">
+          <label for="password">Password check</label>
+
+          <input type="password" placeholder="Password two" id="password2" />
+
+          <i class="fas fa-check-circle"></i>
+          <i class="fas fa-exclamation-circle"></i>
+
+          <small>Error message</small>
+          <button>Submit</button>
+        </div>
     
-</body>
+        </div>
+      </form>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
